# Neura-Craft-backend

./: .gitignore  20251202update.md  README.md  alembic.ini  check_db.py  env.example  generate_revision.py  memo_baba.md  pyproject.toml  requirements.txt  run_alembic.py  run_alembic_unicode.py  run_upgrade.py  search_page_spec.md  security_care.md  test_db.py  test_db_connection.py
.github/workflows/: main_neuracraft-backend.yml
app/: main.py
app/api/: deps.py
app/core/: __init__.py  config.py  logging_config.py  security.py  utils.py
app/db/: __init__.py  session.py
app/schemas/: __init__.py  ai.py  auth.py  common.py  dashboard.py  file.py  reference.py  user.py
app/services/: __init__.py  auth_service.py  blob_service.py  dashboard_service.py  excel_extractor_step3.py  extraction_service.py  file_service.py  llm_service.py  reference_service.py  search_service.py  thumbnail_service.py  user_service.py
docs/: performance_measurement.md
infrastructure/: search_setup.py
neura_craft_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: __init__.py  check_counts.py  check_index_count.py  cleanup_all.py  cleanup_db_only.py  cleanup_local_files.py  cleanup_search_blob.py  cleanup_sync_all.py  debug_indexer.py  del_uploads.py  force_azure_cleanup.py  force_azure_cleanup_logged.py  force_cleanup_v2.py  ingest_existing_files.py  reindex_search.py  seed_data.py  seed_data_rev20251206.py  sync_synonym_map.py  tempCodeRunnerFile.py  test_search_api.py
scripts/utils/: __init__.py  (+1 more)
tests/: test_auth.py  test_files.py  test_users.py
(+26 files in other folders)
